--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Wiesn</title>
+
+    <link rel="stylesheet" href="index.pcss">
+  </head>
   <body>
     <div id="app"></div>
     <script src="src/main.ts"></script>
